# NossiNet

./: .deepsource.toml  .flake8  .gamepack-sha  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AGENT_RULES_INSIGHTS.md  CONTEXT.md  Dockerfile  MECHA_DESIGN.md  NN.db  NossiBot.py  NossiNet.py  Nossigevent.py  README.md  TIPWIKI_NEXT.md  __init__.py  fengraph.py  future_changes.md  generate_dmgmods.py  id_rsa.pub  implementation_log.md  mecha_poc_implementation_plan.md  nossibot_help.txt  pyproject.toml  pyrightconfig.json  regressions.md  relative_occurences_-1.csv  relative_occurences_-2.csv  relative_occurences_-3.csv  relative_occurences_-4.csv  relative_occurences_-5.csv  relative_occurences_0.csv  relative_occurences_1.csv  relative_occurences_4.csv  requirements.txt  roll_frequencies_-1.csv  roll_frequencies_-4.csv  (+13 more)
.github/workflows/: Validate.yml  codestyle.yml  quicktest.yml
Data/: 5d10r-1vr-1_ordered_data  5d10r-1vr-2_ordered_data  5d10r-1vr-3_ordered_data  5d10r-1vr-4_ordered_data  5d10r-1vr-5_ordered_data  5d10r-1vr0_ordered_data  5d10r-1vr1_ordered_data  5d10r-1vr2_ordered_data  5d10r-1vr3_ordered_data  5d10r-1vr4_ordered_data  5d10r-1vr5_ordered_data  5d10r-2vr-1_ordered_data  5d10r-2vr-2_ordered_data  5d10r-2vr-3_ordered_data  5d10r-2vr-4_ordered_data  5d10r-2vr-5_ordered_data  5d10r-2vr0_ordered_data  5d10r-2vr1_ordered_data  5d10r-2vr2_ordered_data  5d10r-2vr3_ordered_data  5d10r-2vr4_ordered_data  5d10r-2vr5_ordered_data  5d10r-3vr-1_ordered_data  5d10r-3vr-2_ordered_data  5d10r-3vr-3_ordered_data  5d10r-3vr-4_ordered_data  5d10r-3vr-5_ordered_data  5d10r-3vr0_ordered_data  5d10r-3vr1_ordered_data  5d10r-3vr2_ordered_data  5d10r-3vr3_ordered_data  5d10r-3vr4_ordered_data  5d10r-3vr5_ordered_data  5d10r-4vr-1_ordered_data  5d10r-4vr-2_ordered_data  5d10r-4vr-3_ordered_data  5d10r-4vr-4_ordered_data  5d10r-4vr-5_ordered_data  5d10r-4vr0_ordered_data  5d10r-4vr1_ordered_data  (+94 more)
Fantasy/: Armor.py  Gems.py  Item.py
NossiBot/: NossiBot.py  __init__.py  nossibot_help.txt
NossiInterface/: NossiBot.py  RollInterface.py  Tools.py  nossibot_help.txt  reminder.py
NossiInterface/Cogs/: CardCog.py  CommandErrorCog.py  DiceCog.py  MinecraftCog.py  NossiCog.py  OracleCog.py  RemindCog.py  StateCog.py  WeaponCog.py  WikiCog.py
NossiPack/: Cards.py  Character.py  Chatrooms.py  Dice.py  DiceParser.py  EWCharacter.py  FenCharacter.py  LocalMarkdown.py  MDPack.py  RegexRouter.py  RollbackImporter.py  User.py  VampireCharacter.py  WikiCharacterSheet.py  WikiPage.py  WoDData.py  WoDDice.py  WoDParser.py  WoDParserV2Test.py  __init__.py  fengraph.py  generate_dmgmods.py  krypta.py  test_woDParser.py
NossiPack/markdown/: __init__.py  base.py
NossiSite/: AfterResponse.py  __init__.py  base.py  base_ext.py  cards.py  chat.py  clock_sync.py  extra.py  github_webhook.py  helpers.py  mecha_history.py  sheet_helpers.py  sheets.py  socks.py  tooltest.py  views.py  webhook.py  wiki.py
NossiSite/locales/: EN.json  newsEN.json
NossiSite/obsolete/: mecha_history.py
NossiSite/renderers/: __init__.py  characterrenderer.py  mecharenderer.py  (+1 more)
scripts/: sync_clocks.py
static/: style.css
templates/: Impressum.html  chargen.html  chat.html  funds.html  layout.html  login.html  payout.html  register.html  show_entries.html  timestep.html  userinfo.html
tests/: NossiTestCase.py  __init__.py  browser_test.py  test_DiceParser.py  test_WikiPageCache.py  test_WoDParser.py  test_htmx_render.py  test_independency.py  test_interface.py  test_mecha_poc.py  test_nossi_markdown.py  test_speed_formula.py  test_views.py  test_wiki.py  test_woDParser.py  testmecha.md
tools/: .tiptap-versions  bundle-tiptap.sh
wiki_test/: testchar.md
(+191 files in other folders)
