[project]
name = "nossinet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.13.4",
    "black~=24.10.0",
    "bleach~=6.2.0",
    "eventlet~=0.40.3",
    "flask~=3.1.0",
    "flask-testing~=0.8.1",
    "flask-wtf~=1.2.2",
    "frozendict~=2.4.6",
    "gamepack~=0.2.1",
    "gevent~=24.11.1",
    "gitpython~=3.1.44",
    "gunicorn~=23.0.0",
    "jinja2~=3.1.5",
    "markdown~=3.7",
    "markupsafe~=3.0.2",
    "matplotlib~=3.10.0",
    "numpy~=2.3.5",
    "pyyaml~=6.0.2",
    "requests~=2.32.4",
    "scipy~=1.16.0",
    "setuptools~=78.1.1",
    "simple-websocket~=1.1.0",
    "sounddevice~=0.5.2",
    "urllib3>=2.5.0",
    "werkzeug~=3.1.3",
    "zipp>=3.19.1",
]

[tool.uv.workspace]
members = [
    "GamePack",
]

[tool.uv.sources]
gamepack = { workspace = true }
