[project]
name = "nossinet"
version = "0.1.0"
description = "Nosferatu Network, A PnP help website"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.2.0",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "frozendict>=2.4.7",
    "gamepack",
    "gevent>=25.9.1",
    "gitpython>=3.1.45",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "simple-websocket>=1.1.0",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "zipp>=3.23.0",
]


[tool.uv.workspace]
members = [
    "GamePack",
]

[tool.uv.sources]
gamepack = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.12.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]
