[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nossinet"
version = "0.1.0"
description = "Nosferatu Network, A PnP help website"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.4.0",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "frozendict>=2.4.7",
    "gamepack",
    "gevent>=25.9.1",
    "gitpython>=3.1.45",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "livekit-api>=1.1.0",
    "markdown>=3.10",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "simple-websocket>=1.1.0",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "zipp>=3.23.0",
]


[tool.setuptools.packages.find]
include = ["NossiPack*", "NossiSite*", "Data*"]

[tool.uv.sources]
gamepack = { path = "../GamePack", editable = true }

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.12.0",
    "playwright>=1.57.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "pytest-env>=1.1.5",
    "pytest-httpserver>=1.1.2",
    "pytest-playwright>=0.7.2",
    "mypy>=1.15.0",
    "ruff>=0.15.16",
    "scipy>=1.16.3",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-bleach>=6.4.0.20260607",
    "types-gevent>=26.4.0.20260518",
    "types-markdown>=3.10.2.20260518",
    "types-requests>=2.33.0.20260518",
]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "../GamePack"


[tool.black]
line-length = 120

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "SIM", "ARG", "RUF"]
ignore = ["D203", "D213", "D407", "D413", "EM101"]  # EM101: single-language repo, string literals in exceptions are fine

[tool.pytest.ini_options]
env = [
    "NOSSI_TEST=true",
]
